--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="../src/assets/images/og-image.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +24,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/c9584d5355.js" crossorigin="anonymous"></script>
-
     <title>Stefan Gorgevik</title>
   </head>
   <body>
