--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property=“og:image” content=“https://ak0.picdn.net/shutterstock/videos/8844460/thumb/12.jpg” />
+  <meta name="image" property="og:image" content="https://ak0.picdn.net/shutterstock/videos/8844460/thumb/12.jpg">
 
-  <meta property="og:image:width" content="1200" />
-
-  <meta property="og:image:height" content="630" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
